fixed search result font size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,10 @@ iframe {
 }
 
 @media screen and (max-width: 700px) {
+  .container {
+    padding-top: 7%;
+  }
+
   .container.lyrics {
     display: flex;
     flex-flow: column nowrap;
@@ -178,6 +182,7 @@ iframe {
 
   .genius-song-link {
     padding-left: 5%;
+    font-size: 2em;
   }
 
   .search-bar {
